--- a/calc.css
+++ b/calc.css
@@ -64,7 +64,7 @@ body{
   position: fixed;
   height: 200%;
   width: 100%;
-  background-image: url(../Images/Background.jpg);
+  background-image: url(bachground2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 80%;
