--- a/amber-css.css
+++ b/amber-css.css
@@ -85,11 +85,11 @@ direction: rtl;
 }
 
 #arrow{
-  position: absolute;
+  position: fixed;
   font-size: 24px;
   direction: ltr;
-  top: 2%;
-  right: 5%;
+  margin-top: 2%;
+  margin-right: 5%;
   color: #fff3fa;
 }
   
