--- a/amber-css.css
+++ b/amber-css.css
@@ -85,11 +85,9 @@ direction: rtl;
 }
 
 #arrow{
-  position: fixed;
+  position: relative;
   font-size: 24px;
-  direction: ltr;
-  margin-top: 2%;
-  margin-right: 5%;
+  margin-right: 7%;
   color: #fff3fa;
 }
   
@@ -236,13 +234,13 @@ p {
     margin-top: 30%;
     width: 90%;
   }
-  #arrow{
+/*   #arrow{
     margin-top: 10%;
     margin-right: 7%;
   }
   h1{
     margin-top: 7%;
-  }
+  } */
   #about{
     font-size: 20px;
     padding: 0 10%;
