--- a/length-css.css
+++ b/length-css.css
@@ -85,12 +85,10 @@ direction: rtl;
 }
 
 #arrow{
-  position: absolute;
+  position: relative;
   font-size: 24px;
-  direction: ltr;
-  top: 2%;
-  right: 5%;
-  color: #f1f9ff;
+  margin-right: 7%;
+  color: #fff3fa;
 }
   
   
@@ -229,12 +227,6 @@ p {
     transition: 0.3s;
     margin-top: 30%;
     width: 90%;
-  }
-  #arrow{
-    top: 1%;
-  }
-  h1{
-    margin-top: 7%;
   }
   input[type="number"] {  
     padding: 20px; 
