--- a/mass-css.css
+++ b/mass-css.css
@@ -85,11 +85,9 @@ direction: rtl;
 }
 
 #arrow{
-  position: absolute;
+  position: relative;
   font-size: 24px;
-  direction: ltr;
-  top: 2%;
-  right: 5%;
+  margin-right: 7%;
   color: #f3fffb;
 }
   
@@ -235,12 +233,6 @@ p {
     transition: 0.3s;
     margin-top: 30%;
     width: 90%;
-  }
-  #arrow{
-    top: 1%;
-  }
-  h1{
-    margin-top: 7%;
   }
   input[type="number"] { 
     width: 120mm; 
