--- a/time-css.css
+++ b/time-css.css
@@ -86,11 +86,9 @@ direction: rtl;
 }
 
 #arrow{
-  position: absolute;
+  position: relative;
   font-size: 24px;
-  direction: ltr;
-  top: 2%;
-  right: 5%;
+  margin-right: 7%;
   color:rgb(247, 242, 255);
 }
   
@@ -236,12 +234,6 @@ p {
     transition: 0.3s;
     margin-top: 30%;
     width: 90%;
-  }
-  #arrow{
-    top: 1%;
-  }
-  h1{
-    margin-top: 7%;
   }
   input[type="number"] { 
     width: 110mm; 
